--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^8.2.0",
+    "node-schedule": "^1.3.2",
     "puppeteer": "^5.3.1",
     "twilio": "^3.49.3"
   }
