--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
   "author": "Hugo",
   "license": "ISC",
   "dependencies": {
+    "bluebird": "^3.7.2",
     "dotenv": "^8.2.0",
+    "mongoose": "^5.10.7",
     "node-schedule": "^1.3.2",
     "puppeteer": "^5.3.1",
+    "request": "^2.88.2",
+    "request-promise": "^4.2.6",
     "twilio": "^3.49.3"
   }
 }
