--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "dependencies": {
     "bluebird": "^3.7.2",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "mongoose": "^5.10.7",
+    "node-fetch": "^2.6.1",
     "node-schedule": "^1.3.2",
+    "nodemon": "^2.0.4",
     "puppeteer": "^5.3.1",
     "request": "^2.88.2",
     "request-promise": "^4.2.6",
