--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-     "start": "node index.js"
+    "start": "node postResults.js"
   },
   "author": "Hugo",
   "license": "ISC",
@@ -21,5 +21,8 @@
     "request": "^2.88.2",
     "request-promise": "^4.2.6",
     "twilio": "^3.49.3"
+  },
+  "devDependencies": {
+    "webpack-dev-server": "^3.11.0"
   }
 }
