--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-     "start": "node index.js"
+    "start": "node index.js"
   },
   "author": "Hugo",
   "license": "ISC",
@@ -13,10 +13,12 @@
     "bluebird": "^3.7.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "fetch-timeout": "0.0.2",
     "mongoose": "^5.10.7",
     "node-fetch": "^2.6.1",
     "node-schedule": "^1.3.2",
     "nodemon": "^2.0.4",
+    "promise-fn-retry": "^1.0.10",
     "puppeteer": "^5.3.1",
     "request": "^2.88.2",
     "request-promise": "^4.2.6",
