--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongoose": "^5.10.7",
     "node-fetch": "^2.6.1",
     "node-schedule": "^1.3.2",
+    "nodejs-base64-converter": "^1.0.5",
     "nodemon": "^2.0.4",
     "promise-fn-retry": "^1.0.10",
     "puppeteer": "^5.3.1",
